[package]
name = "rs-http-bench-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10"
httparse = "1.8.0"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["net", "rt", "rt-multi-thread", "mio", "io-std", "io-util"] }
